--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,100 +1,82 @@
 @font-face {
-    font-family: 'Wotfard Bold';
-    src: url('/fonts/wotfard-bold-webfont.ttf') format('truetype');
-    font-weight: bold;
+    font-family: "CascadiaCode";
+    src: url("/fonts/cascadia/CascadiaCode.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'Wotfard Medium Italic';
-    src: url('/fonts/wotfard-mediumitalic-webfont.ttf') format('truetype');
-    font-weight: 500;
-    /* Medium */
+    font-family: "Wotfard";
+    src: url("/fonts/wotfard/wotfard-regularitalic-webfont.ttf") format("truetype");
+    font-weight: 400;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'Wotfard Bold Italic';
-    src: url('/fonts/wotfard-bolditalic-webfont.ttf') format('truetype');
-    font-weight: bold;
+    font-family: "Wotfard";
+    src: url("/fonts/wotfard/wotfard-bolditalic-webfont.ttf") format("truetype");
+    font-weight: 700;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'Wotfard Regular';
-    src: url('/fonts/wotfard-regular-webfont.ttf') format('truetype');
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: 'Wotfard ExtraLight';
-    src: url('/fonts/wotfard-extralight-webfont.ttf') format('truetype');
-    font-weight: 200;
-    /* Extra-Light */
-}
-
-@font-face {
-    font-family: 'Wotfard Regular Italic';
-    src: url('/fonts/wotfard-regularitalic-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Wotfard ExtraLight Italic';
-    src: url('/fonts/wotfard-extralightitalic-webfont.ttf') format('truetype');
-    font-weight: 200;
-    /* Extra-Light */
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Wotfard Semibold';
-    src: url('/fonts/wotfard-semibold-webfont.ttf') format('truetype');
+    font-family: "Wotfard";
+    src: url("/fonts/wotfard/wotfard-semibolditalic-webfont.ttf") format("truetype");
     font-weight: 600;
-    /* Semibold */
-}
-
-@font-face {
-    font-family: 'Wotfard Light';
-    src: url('/fonts/wotfard-light-webfont.ttf') format('truetype');
-    font-weight: 300;
-    /* Light */
-}
-
-@font-face {
-    font-family: 'Wotfard Semibold Italic';
-    src: url('/fonts/wotfard-semibolditalic-webfont.ttf') format('truetype');
-    font-weight: 600;
-    /* Semibold */
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'Wotfard Light Italic';
-    src: url('/fonts/wotfard-lightitalic-webfont.ttf') format('truetype');
-    font-weight: 300;
-    /* Light */
-    font-style: italic;
+    font-family: "Wotfard";
+    src: url("/fonts/wotfard/wotfard-regular-webfont.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'Wotfard Thin';
-    src: url('/fonts/wotfard-thin-webfont.ttf') format('truetype');
-    font-weight: 100;
-    /* Thin */
-}
-
-@font-face {
-    font-family: 'Wotfard Medium';
-    src: url('/fonts/wotfard-medium-webfont.ttf') format('truetype');
+    font-family: "Wotfard";
+    src: url("/fonts/wotfard/wotfard-medium-webfont.ttf") format("truetype");
     font-weight: 500;
-    /* Medium */
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'Wotfard Thin Italic';
-    src: url('/fonts/wotfard-thinitalic-webfont.ttf') format('truetype');
-    font-weight: 100;
-    /* Thin */
+    font-family: "Wotfard";
+    src: url("/fonts/wotfard/wotfard-mediumitalic-webfont.ttf") format("truetype");
+    font-weight: 500;
     font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Wotfard";
+    src: url("/fonts/wotfard/wotfard-semibold-webfont.ttf") format("truetype");
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Wotfard";
+    src: url("/fonts/wotfard/wotfard-bold-webfont.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-weight: 400;
+    font-family: "JetBrains Mono";
+    font-style: normal;
+    src: local("JetBrains Mono Regular"), local("JetBrainsMono-Regular"),
+        url("/fonts/JetBrainsMono-Regular.woff2") format("woff2");
+    font-feature-settings: "aalt"1, "calt"1, "case"1, "ccmp"1, "frac"1,
+        "ordn"1, "sinf"1, "subs"1, "sups"1, "zero"1, "mark"1, "mkmk"1;
+    font-display: swap;
 }
