chore: smooth scroll

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <Layout title={title}>
-    <div class="flex justify-center scroll-smooth">
+    <div class="flex justify-center">
         <div class="w-4/6">
             <Navbar />
 
