chore: restructure folders

--- a/src/components/layouts/PageLayout.astro
+++ b/src/components/layouts/PageLayout.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "./Layout.astro";
-import Navbar from "../components/nav/Navbar.tsx";
+import Navbar from "../nav/Navbar";
 
 interface Props {
     title: string;
