--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
-import MyFace from "../imgs/my_face.png";
-import { projects_data } from "../data/projects";
-import { competitions_data } from "../data/competitions";
+import MyFace from "../static/imgs/my_face.png";
+import { projects_data } from "../static/data/projects";
+import { competitions_data } from "../static/data/competitions";
 
-import PageLayout from "../layouts/PageLayout.astro";
+import PageLayout from "../components/layouts/PageLayout.astro";
 import ProjectCard from "../components/project/ProjectCard";
 import { Github, Mail } from "lucide-react";
 import CompetitionCard from "../components/competition/CompetitionCard";
