feat: show blog posts on home page

--- a/src/components/layouts/PageLayout.astro
+++ b/src/components/layouts/PageLayout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <Layout title={title}>
-    <div class="flex justify-center">
+    <div class="flex justify-center mb-24">
         <div class="w-4/6">
             <Navbar />
 
