--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,7 +116,7 @@ const allPosts = await getCollection("posts");
                     }
                 </div>
 
-                <div class="flex flex-row gap-2">
+                <div class="flex flex-row gap-2 mb-8">
                     <Github />
                     <Mail />
                 </div>
