--- a/src/components/layouts/PageLayout.astro
+++ b/src/components/layouts/PageLayout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 <Layout title={title}>
     <div class="flex justify-center mb-24 mx-6 md:mx-0">
         <div class="w-full md:w-3/4">
-            <div class="md:mb-8">
+            <div class="mb-8">
                 <Navbar client:load />
             </div>
 
