--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,7 +102,7 @@ const allPosts = await getCollection("posts");
                     />.
                 </p>
 
-                <div>
+                <div class="mt-8 md:mt-0">
                     <h3>Coding Stats</h3>
                     {
                         Object.keys(wakatime_data).map((year) => (
