--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,7 +165,7 @@ const allPosts = await getCollection("posts");
         </div>
     </div>
 
-    <div id="projects" class="flex flex-col gap-8">
+    <div id="projects" class="flex flex-col gap-6">
         <div>
             <h2>Featured Projects</h2>
             <p>
@@ -173,7 +173,7 @@ const allPosts = await getCollection("posts");
                 knowlege I've accumulate over the years.
             </p>
         </div>
-        <div class="flex flex-col gap-12">
+        <div class="ml-4 flex flex-col gap-12">
             {
                 Object.entries(project_sections).map(
                     ([title, json_section]) => (
