--- a/src/components/coding_time/CodingTime.astro
+++ b/src/components/coding_time/CodingTime.astro
@@ -8,7 +8,7 @@ interface Props {
 const { year, hours, minutes } = Astro.props;
 ---
 
-<p class="text-base md:text-lg leading-loose">
+<p class="text-sm md:text-lg leading-loose">
     {year}:{" "}
     <span class="text-pink-600 font-bold">
         {hours} hrs & {minutes} mins
