chore: decrease some padding

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -33,7 +33,7 @@ const { Content } = await entry.render();
             </p>
         </div>
 
-        <div class="mx-auto w-full text-xl text-white py-8 px-4">
+        <div class="mx-auto w-full text-xl text-white py-8 md:px-4">
             <div>
                 <Content components={{ ...MDXComponents }} />
             </div>
