chore: shorten description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const project_sections: Record<
     "Websites & Fullstack": {
         slug: "sites",
         description:
-            "These are full-stack or frontend-only projects that I've created. For full-stack, these will include a backend and database in the project as well.",
+            "These are full-stack or frontend-only projects that I've created.",
     },
     "Backend & Bots": {
         slug: "backends",
