--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,8 +171,8 @@ const allPosts = await getCollection("posts");
         <div>
             <h2>Featured Projects</h2>
             <p>
-                These are the projects that I believe display a large amount of
-                knowlege I've accumulate over the years.
+                These are the projects that I believe display a the
+                knowlege I've accumulated over the years.
             </p>
         </div>
         <div class="ml-1 md:ml-4 flex flex-col gap-12">
