chore: more grammar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,7 +171,7 @@ const allPosts = await getCollection("posts");
         <div>
             <h2>Featured Projects</h2>
             <p>
-                These are the projects that I believe display a the
+                These are the projects that I believe display the
                 knowlege I've accumulated over the years.
             </p>
         </div>
