--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,7 @@ import CompetitionCard from "../components/competition/CompetitionCard";
 import { getCollection } from "astro:content";
 import Link from "../components/Link";
 import { colors } from "../utils/links";
+import Typing from "../components/Typing";
 
 const project_sections: Record<
     string,
@@ -42,7 +43,8 @@ const allPosts = await getCollection("posts");
 <PageLayout title="Zaid's Site">
     <div id="home" class="flex flex-col md:flex-row">
         <div class="flex flex-col gap-8 pr-8">
-            <h1>Hello, I'm Zaid.</h1>
+            <Typing client:load text="Hello, I'm Zaid." />
+
             <div class="flex flex-col font-normal gap-4">
                 <p class="leading-loose">
                     I build full-stack stuff™ using
@@ -171,8 +173,8 @@ const allPosts = await getCollection("posts");
         <div>
             <h2>Featured Projects</h2>
             <p>
-                These are the projects that I believe display the
-                knowlege I've accumulated over the years.
+                These are the projects that I believe display the knowlege I've
+                accumulated over the years.
             </p>
         </div>
         <div class="ml-1 md:ml-4 flex flex-col gap-12">
